fix scrollbar location for tables

--- a/styles/post.css
+++ b/styles/post.css
@@ -66,9 +66,6 @@
     @apply text-orange-500;
 }
 
-.post table {
-    @apply mt-5 mb-10;
-}
 .post table thead {
     @apply border-b-2 border-orange-500;
 }
